--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "scripts": {
     "build": "yarn build:nft && yarn build:market",
     "build:nft": "near-sdk-js build src/nft-contract/index.ts build/nft.wasm",
+    "build:nft-crowdfunding": "near-sdk-js build src/nft-contract/nft_crowdfunding.ts build/nft-crowdfunding.wasm",
     "build:market": "near-sdk-js build src/market-contract/index.ts build/market.wasm",
     "test": "ava"
   },
   "author": "Near Inc <hello@nearprotocol.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "near-sdk-js": "0.4.0-5",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "near-api-js": "^3.0.4",
+    "near-sdk-js": "0.4.0-5"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
